--- a/ProyectoFinalAR/src/app/components/hys/hys.component.html
+++ b/ProyectoFinalAR/src/app/components/hys/hys.component.html
@@ -1,6 +1,9 @@
+
+<div>
+<h1>Hard and Soft skills</h1>
+</div>
+
 <div class="row">
-    <h1>Hard and Soft skills</h1>
-    
     <div class="text-center col-sm-4 col-md-4 col-lg-4">
         <circle-progress
         [percent]="85"
