--- a/ProyectoFinalAR/src/app/components/logo-ap/logo-ap.component.css
+++ b/ProyectoFinalAR/src/app/components/logo-ap/logo-ap.component.css
@@ -1,3 +1,30 @@
+.container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.redes{
+    margin-right: 0.5em;
+}
 #logoAP{
     width: 150px;
+}
+img{
+    width: 40px;
+}
+.btn{
+    border-width: medium;
+}
+
+/*--- Para la vista de celulae ---*/
+.container{
+    flex-direction: column;
+}
+.redes{
+    display: flex;
+    flex-direction:  row-reverse;
+    align-items: center;
+}
+.redes img{
+   margin: 0.2em;
 }
