--- a/ProyectoFinalAR/src/app/components/proyecto/proyecto.component.css
+++ b/ProyectoFinalAR/src/app/components/proyecto/proyecto.component.css
@@ -1,12 +1,11 @@
 .row{
     padding: 20px;
     background-color: #a1b5cb;
-    
-    
 }
 
 .contenedor{
     width: auto;
+    display: flex;
 }
 .parte1 , parte2{
     display: inline-block;
