--- a/ProyectoFinalAR/FrontEnd/src/app/components/educacion/educacion.component.html
+++ b/ProyectoFinalAR/FrontEnd/src/app/components/educacion/educacion.component.html
@@ -1,34 +1,31 @@
 <div class="row">
     <h1>Educacion</h1>
-    <div class="col-lg-1"></div>
+    <div class="col-lg-2">
+        <button type="button" class="btn btn-dark" routerLink="/nuevaedu" *ngIf="isLogged">
+            Agregar Educacion
+        </button>
+    </div>
+
+    <div class="col lg 1"></div>
     <div class="col-lg-11">
-    <ul>
-        <li> <h1>Estudio 1</h1> - <h3>(years)</h3></li>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing
-            elit, sed do eiusmod tempor incididunt ut labore et
-             dolore magna aliqua. Cras ornare arcu dui vivamus.
-            Lacus luctus accumsan tortor posuere. Mattis ullamcorper
-            velit sed ullamcorper morbi tincidunt ornare massa. 
-             Non diam phasellus vestibulum lorem.</p>
-    </ul>
-    <ul>
-        <li> <h1>Estudio 2</h1> - <h3>(years)</h3></li>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing
-            elit, sed do eiusmod tempor incididunt ut labore et
-             dolore magna aliqua. Cras ornare arcu dui vivamus.
-            Lacus luctus accumsan tortor posuere. Mattis ullamcorper
-            velit sed ullamcorper morbi tincidunt ornare massa. 
-             Non diam phasellus vestibulum lorem.</p>
-    </ul>
-    <ul>
-        <li> <h1>Estudio 3</h1> - <h3>(years)</h3></li>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing
-            elit, sed do eiusmod tempor incididunt ut labore et
-             dolore magna aliqua. Cras ornare arcu dui vivamus.
-            Lacus luctus accumsan tortor posuere. Mattis ullamcorper
-            velit sed ullamcorper morbi tincidunt ornare massa. 
-             Non diam phasellus vestibulum lorem.</p>
-    </ul>
-</div>
+        <table class="table">
+            <tbody>
+                <tr *ngFor="let Educacion of educacion">
+                    <td>
+                        <h2>{{Educacion.nombreE}}</h2>
+                    </td>
+                    <td>{{Educacion.descripcionE}}</td>
+                    <td *ngIf="isLogged">
+                        <button class="btn btn-success" routerLink="/editedu/{{Educacion.id}}">
+                            <i class="bi bi-pencil-fill"></i> EDITAR</button>
+                    </td>
+                    <td *ngIf="isLogged">
+                        <button class="btn btn-danger" (click)="delete(Educacion.id)">
+                            <i class="bi bi-trash-fill"></i> BORRAR</button>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 </div>
 
