--- a/ProyectoFinalAR/FrontEnd/src/app/components/experiencia/experiencia.component.html
+++ b/ProyectoFinalAR/FrontEnd/src/app/components/experiencia/experiencia.component.html
@@ -1,33 +1,31 @@
 <div class="row">
-    <h1>Experiencia laboral</h1>
-    <div class="col-lg-1"></div>
-    <div class="col-lg-11">
-    <ul>
-        <li> <h1>Trabajo 1</h1> - <h3>(years)</h3></li>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing
-           elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua. Cras ornare arcu dui vivamus.
-            Lacus luctus accumsan tortor posuere. Mattis ullamcorper
-            velit sed ullamcorper morbi tincidunt ornare massa. 
-            Non diam phasellus vestibulum lorem. </p>
-    </ul>
-    <ul>
-        <li> <h1>Trabajo 2</h1> - <h3>(years)</h3></li>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing
-            elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua. Cras ornare arcu dui vivamus.
-            Lacus luctus accumsan tortor posuere. Mattis ullamcorper
-            velit sed ullamcorper morbi tincidunt ornare massa. 
-             Non diam phasellus vestibulum lorem.</p>
-    </ul>
-    <ul>
-        <li> <h1>Trabajo 3</h1> - <h3>(years)</h3></li>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing
-           elit, sed do eiusmod tempor incididunt ut labore et
-           dolore magna aliqua. Cras ornare arcu dui vivamus.
-           lacus luctus accumsan tortor posuere. Mattis ullamcorper
-           velit sed ullamcorper morbi tincidunt ornare massa. 
-           Non diam phasellus vestibulum lorem.</p>
-    </ul>
-</div>
+  <h1>Experiencia laboral</h1>
+  <div class="col-lg-2">
+      <button type="button" class="btn btn-dark" routerLink="/nuevaexp" *ngIf="isLogged">
+          Nueva Experiencia
+      </button>
+  </div>
+
+  <div class="col lg 1"></div>
+  <div class="col-lg-11">
+      <table class="table">
+          <tbody>
+              <tr *ngFor="let Experiencia of expe">
+                  <td>
+                      <h2>{{Experiencia.nombreE}}</h2>
+                  </td>
+                  <td>{{Experiencia.descripcionE}}</td>
+                  <td *ngIf="isLogged">
+                      <button class="btn btn-success" routerLink="/editexp/{{Experiencia.id}}">
+                          <i class="bi bi-pencil-fill"></i> EDITAR</button>
+                  </td>
+                  <td *ngIf="isLogged">
+                      <button class="btn btn-danger" (click)="delete(Experiencia.id)">
+                          <i class="bi bi-trash-fill"></i> BORRAR</button>
+                  </td>
+              </tr>
+          </tbody>
+      </table>
+  </div>
+
 </div>
