--- a/ProyectoFinalAR/FrontEnd/src/app/components/logo-ap/logo-ap.component.html
+++ b/ProyectoFinalAR/FrontEnd/src/app/components/logo-ap/logo-ap.component.html
@@ -10,8 +10,11 @@
                     <a href=""><img src="../../../assets/instagram.png" id="instagram"></a>
                     <a href=""><img src="../../../assets/github.png" id="github"></a>
                     <a href=""><img src="../../../assets/facebook.png" id="facebook"></a>
-                    <button type="buton" class="btn btn-outline-light">INGRESO</button>
+                    <button type="buton" class="btn btn-outline-light" (click)="login()" *ngIf="!isLogged">INGRESO</button>
+                    <button type="buton" class="btn btn-outline-light" (click)="onLogOut()" *ngIf="isLogged" >CERRAR SESION</button>
                 </div>
         </div>
     </div>
+
+    
 
