--- a/ProyectoFinalAR/FrontEnd/src/app/components/proyecto/proyecto.component.html
+++ b/ProyectoFinalAR/FrontEnd/src/app/components/proyecto/proyecto.component.html
@@ -2,7 +2,7 @@
     <h1>Proyectos realizados</h1>
     <div class="contenedor">
         <div class="col-sm-12 col-md-7 col-lg-7 parte1">
-            <h2>Proyecto 1</h2>
+            <h2>Argentina Programa</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
                  sed do eiusmod tempor incididunt ut labore et dolore
                  magna aliqua. Ut enim ad minim veniam, quis nostrud 
