Cambios del front

--- a/ProyectoFinalAR/FrontEnd/src/app/components/proyecto/proyecto.component.html
+++ b/ProyectoFinalAR/FrontEnd/src/app/components/proyecto/proyecto.component.html
@@ -12,7 +12,7 @@
                  eu fugiat nulla pariatur.</p>
         </div>
         <div class="col-sm-12 col-md-3 collg-3 offset-md-1 offset-lg-1 parte2">
-          <img src="../../../assets/foto.jpg" class="img-fluid img-proyecto">
+          <img src="../../../assets/proyec.png" class="img-fluid img-proyecto">
         </div>
     </div>
 </div>
