--- a/ProyectoFinalAR/FrontEnd/src/app/components/proyecto/proyecto.component.html
+++ b/ProyectoFinalAR/FrontEnd/src/app/components/proyecto/proyecto.component.html
@@ -3,16 +3,17 @@
     <div class="contenedor">
         <div class="col-sm-12 col-md-7 col-lg-7 parte1">
             <h2>Argentina Programa</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                 sed do eiusmod tempor incididunt ut labore et dolore
-                 magna aliqua. Ut enim ad minim veniam, quis nostrud 
-                 exercitation ullamco laboris nisi ut aliquip ex
-                  ea commodo consequat. Duis aute irure dolor in
-                 reprehenderit in voluptate velit esse cillum dolore 
-                 eu fugiat nulla pariatur.</p>
+            <p>Se trata de un programa nacional y federal que tiene como objetivo capacitar a personas en lenguajes y conocimientos sobre programación, testing y 
+                habilidades digitales para potenciar la empleabilidad en el sector del software y la tecnología.
+                El programa es impulsado por el Ministerio de Economía de la Nación con apoyo de un consejo consultivo 
+                especializado y tiene como principales objetivos:
+                Capacitar a más de 70 mil personas en el transcurso de un año para que puedan insertarse en un mercado laboral internacional emergente.
+                Articular las necesidades del mercado con la formación de más personas en tecnología.
+                Generar valor agregado a los sectores industriales tradicionales y no tradicionales.
+                Brindar la posibilidad de acceder a empleos de calidad con buenas remuneraciones.</p>
         </div>
         <div class="col-sm-12 col-md-3 collg-3 offset-md-1 offset-lg-1 parte2">
-          <img src="../../../assets/proyec.png" class="img-fluid img-proyecto">
+          <img src="../../../assets/My.gif" class="img-fluid img-proyecto">
         </div>
     </div>
 </div>
