--- a/ProyectoFinalAR/FrontEnd/src/app/components/banner/banner.component.html
+++ b/ProyectoFinalAR/FrontEnd/src/app/components/banner/banner.component.html
@@ -1,3 +1,3 @@
 <div>
-    <img src="../../../assets/banner.png" class="img-fluid">
+    <img src="../../../assets/cumpleaños.gif" class="img-fluid">
 </div>
